# whatsapp-bot

./: .env.docker.dev  .env.docker.prod  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKREF.md  README.md  RUNBOOK.md  docker-compose.dev.yml  docker-compose.docker.yml  docker-compose.prod.yml  docker-compose.yml  manage_media.py  media  pyproject.toml  test.py
app/: create_app.py  main.py
app/api/: __init__.py
app/api/v1/routers/: __init__.py  health.py  whatsapp.py
app/core/: auth.py  config.py  logging.py  redis.py
app/models/: __init__.py  car_media.py  chat.py  customer.py  whatsapp.py
app/services/: __init__.py  car_media.py  database.py  inventory_search.py  queue.py  whatsapp.py
app/workers/: README.md  __init__.py  dlq_manager.py  error_handling.py  job_deduplication.py  job_status.py  lifecycle.py  task_functions.py  tasks.py
docs/: AGENTS.md  CAR_MEDIA.md  DOCKER-QUICKSTART.md  DOCKER.md  ENVIRONMENT.md  MEDIA_CLI.md  RUNBOOK.md  WORKER_ERROR_HANDLING.md
examples/: car_media_usage.py  whatsapp_message_types.py
migrations/: 001_add_car_media.sql
redis/: redis.conf
specs/001-create-a-whatsapp/: plan.md  spec.md
tests/: test_tasks_deduplication.py  test_whatsapp_service.py  test_worker_error_handling.py
